# WeatherApp

./: .env  README.md  docker-compose.yml  pyproject.toml
src/: .gitignore  db.sqlite3
src/api/v1/: views.py
src/apps/weather/: models.py  serializers.py  urls.py
src/apps/weather/dto/: weather_dto.py
src/apps/weather/migrations/: 0001_initial.py  0002_delete_searchhistory.py
src/apps/weather/services/: weather_api_services.py
src/config/: settings.py  urls.py
